# wg_test_task

./: .gitignore  CMakeLists.txt  README.md  circular_buffer_list.h  circular_buffer_thread_safe.h  main.cpp  result.txt  sort.h  timer.h
