# CMakeList.txt: проект CMake для WG_Test_Task; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("WG_Test_Task")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (WG_Test_Task "main.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
